update build to be flexible for JDK 17/21