@@ -21,6 +21,7 @@
 		<axonstarter.version>4.9.0</axonstarter.version>
 		<axon.mongo.version>4.9.0</axon.mongo.version>
 		<sapl.version>3.0.0-SNAPSHOT</sapl.version>
+		<argLine />
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -155,5 +156,36 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<profiles>
+		<profile>
+			<activation>
+				<jdk>[21,)</jdk>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.5</version>
+							<configuration>
+								<argLine>@{argLine} -Xshare:off
+									-XX:+EnableDynamicAgentLoading</argLine>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-compiler-plugin</artifactId>
+							<version>3.12.1</version>
+							<configuration>
+								<compilerArgs>
+									<arg>-proc:full</arg>
+								</compilerArgs>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 </project>
